[package]
name = "egui-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.21.0", features = ["bytemuck", "cint", "persistence", "serde", "deadlock_detection", "color-hex", "tracing"], default-features = false }
